<resources>
    <string name="app_name">InnaMed HealthScale</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">Welcome to your <b><i>dashboard</i></b></string>
    <string name="title_activity_dashboard_temp">Welcome to your <b><i>dashboard</i></b></string>
    <string name="m">m</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_test_log">Past Testing History</string>
    <string name="title_activity_analyte">Analyte</string>
    <string name="title_activity_notes">Notes</string>
    <string name="third_party_developers">Allow third party developers to help you protect your health by having access to research and analyze it</string>
    <string-array name="profile_array">
        <item>Edit Information</item>
        <item>Privacy Settings</item>
        <item>Logout</item>
        <item>Home</item>
    </string-array>
    <string name="title_bun">BUN</string>
    <string name="title_creatinine">Creatinine</string>
    <string name="title_glucose">Glucose</string>
    <string name="title_t4">T4</string>
    <string name="title_cholesterol">Cholesterol</string>
    <string name="title_b12">Vitamin B12</string>
    <string name="title_crp">CRP</string>
    <string name="title_activity_settings">Settings</string>
</resources>
