<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.innamed.healthscale.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/page_start"
        android:layout_marginTop="180dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/bun_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:elevation="0dp"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/bun_label"
                    android:text="@string/title_bun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="30sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/cholesterol_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/cholesterol_label"
                    android:text="@string/title_cholesterol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="26sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/t4_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/t4_label"
                    android:text="@string/title_t4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="30sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/creatinine_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:elevation="0dp"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/creatinine_label"
                    android:text="@string/title_creatinine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="28sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/glucose_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/glucose_label"
                    android:text="@string/title_glucose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="30sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/b12_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/b12_label"
                    android:text="@string/title_b12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="30sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageButton
                        android:layout_width="70pt"
                        android:id="@+id/crp_button"
                        android:layout_height="80pt"
                        android:src="@drawable/circle_gray"
                        android:layout_marginTop="0dp"
                        android:background="#00ffffff"
                        android:scaleType="fitStart"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/crp_label"
                    android:text="@string/title_crp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="28pt"
                    android:gravity="center"
                    android:textColor="@color/darkGrey"
                    android:textSize="30sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>